[gd_scene load_steps=4 format=2]

[ext_resource path="res://recursosInternos/Themes/letra.tres" type="Theme" id=1]
[ext_resource path="res://opciones/Opciones.gd" type="Script" id=2]
[ext_resource path="res://volumen/Volumen.tscn" type="PackedScene" id=3]

[node name="Opciones" type="AcceptDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -504.0
margin_top = -192.0
margin_right = 504.0
margin_bottom = 192.0
theme = ExtResource( 1 )
window_title = ""
dialog_text = "Options"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -496.0
margin_top = -141.0
margin_right = 496.0
margin_bottom = 127.0
custom_constants/separation = 29
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelMusica" type="Label" parent="Container"]
margin_right = 992.0
margin_bottom = 43.0
text = "Music Volume"
align = 1

[node name="SliderMusica" type="HSlider" parent="Container"]
margin_top = 72.0
margin_right = 992.0
margin_bottom = 88.0
min_value = -40.0
max_value = -6.0
value = -6.0

[node name="LabelSonidos" type="Label" parent="Container"]
margin_top = 117.0
margin_right = 992.0
margin_bottom = 160.0
text = "Sound Volume"
align = 1

[node name="SliderSonidos" type="HSlider" parent="Container"]
margin_top = 189.0
margin_right = 992.0
margin_bottom = 205.0
min_value = -40.0
max_value = -6.0
value = -6.0

[node name="Volumen" parent="." instance=ExtResource( 3 )]
[connection signal="value_changed" from="Container/SliderMusica" to="." method="_on_SliderMusica_value_changed"]
[connection signal="value_changed" from="Container/SliderSonidos" to="." method="_on_SliderSonidos_value_changed"]
